tests/trybuild_tests_src/contiguous_derive_failure.stderr
error: Only fieldless enums are supported
 --> $DIR/contiguous_derive_failure.rs:3:10
  |
3 | #[derive(Contiguous, Copy, Clone)]
  |          ^^^^^^^^^^

error: Contiguous requires the enum discriminants to be contiguous
 --> $DIR/contiguous_derive_failure.rs:9:10
  |
9 | #[derive(Contiguous, Copy, Clone)]
  |          ^^^^^^^^^^
